[changed] comments test1.html

--- a/public/html/test1.html
+++ b/public/html/test1.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<!--  YOU DO NEED JQUERY AND UNDERSCORE TO BE INSTALLED HERE -->
+<!--  YOU NEED JQUERY AND UNDERSCORE TO BE INSTALLED HERE -->
 <html>
 <script type="text/template" class="template">
 <style type="text/css">
