[added] clientside setup

--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
+<!DOCTYPE html>
 <html>
-<head>yo<head/>
+<head>
+  <title>i hate this </title>
+  <link rel="stylesheet" href="/public/stylesheets/style.css"/>
+</head>
+
   <body>
-</body>
+   <div id="wrapper"></div>
+   <!-- Import bundled JavaScript -->
+    <script src="/bundle.js"></script>
+ </body>
+
 </html>
