--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>i hate this </title>
-  <link rel="stylesheet" href="/public/stylesheets/style.css"/>
+  <title>Widget Builder</title>
+  <link rel="stylesheet" href="/stylesheets/style.css"/>
 </head>
 
   <body>
    <div id="wrapper"></div>
    <!-- Import bundled JavaScript -->
-    <script src="/bundle.js"></script>
+    <script src="http://localhost:8081/bundle.js"></script>
  </body>
 
 </html>
